--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -37,3 +37,7 @@ bind-key C-a last-pane
 
 # Local config
 if-shell "[ -f ~/.tmux.conf.local ]" 'source ~/.tmux.conf.local'
+
+# enable copy-paste http://goo.gl/DN82E
+set -g default-command "reattach-to-user-namespace -l zsh"
+
