--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -35,9 +35,16 @@ set -g history-limit 10000
 # switch to last pane
 bind-key C-a last-pane
 
-# Local config
-if-shell "[ -f ~/.tmux.conf.local ]" 'source ~/.tmux.conf.local'
+# use different keys to split vertical and horizonal
+bind | split-window -h
+bind - split-window -v
 
 # enable copy-paste http://goo.gl/DN82E
 set -g default-command "reattach-to-user-namespace -l zsh"
 
+# change cursor in vim to distinguish between insert and command mode
+# Use in conjunciton with tmux-cursors.vim
+set-option -g terminal-overrides '*88col*:colors=88,*256col*:colors=256,xterm*:XT:Ms=\E]52;%p1%s;%p2%s\007:Cc=\E]12;%p1%s\007:Cr=\E]112\007:Cs=\E]50;CursorShape=%?%p1%{3}%<%t%{0}%e%p1%{2}%-%;%d\007'
+
+# use C-a v to paste the tmux buffer
+bind v paste-buffer
