--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -48,3 +48,13 @@ set-option -g terminal-overrides '*88col*:colors=88,*256col*:colors=256,xterm*:X
 
 # use C-a v to paste the tmux buffer
 bind v paste-buffer
+
+# Enable mouse support (works in iTerm)
+set-window-option -g mode-mouse on
+set-option -g mouse-select-pane on
+set-option -g mouse-resize-pane on
+set-option -g mouse-select-window on
+
+
+
+
