--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -22,5 +22,6 @@
   pr = !gh pull-request
   st = status
   up = !git fetch origin && git rebase origin/master
+  push-ci = !sh -c '
 [fetch]
   prune = true
