--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -41,7 +41,7 @@ bind | split-window -h
 bind - split-window -v
 
 # enable copy-paste http://goo.gl/DN82E
-ption -g status-bg colour235 #base02
+set-option -g status-bg colour235 #base02
 set-option -g status-fg colour136 #yellow
 set-option -g status-attr default
 
