--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -2,6 +2,9 @@
 # improve colors
 set -g default-terminal 'screen-256color'
 
+unbind r
+bind r source-file ~/.tmux.conf
+
 # act like vim
 setw -g mode-keys vi
 bind h select-pane -L
@@ -153,7 +156,7 @@ set-window-option -g mode-mouse on
 set-option -g mouse-select-pane on
 set-option -g mouse-resize-pane on
 set-option -g mouse-select-window on
-
+set-option -g default-shell /bin/zsh
 
 
 
