--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -1,6 +1,6 @@
 
 # improve colors
-set -g default-terminal 'screen-256color'
+set -g default-terminal 'xterm-256color'
 
 unbind r
 bind r source-file ~/.tmux.conf
