--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -25,3 +25,7 @@
   push-ci = !sh -c '
 [fetch]
   prune = true
+[filter "hawser"]
+	clean = git hawser clean %f
+	smudge = git hawser smudge %f
+	required = true
