--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -1,4 +1,3 @@
-
 # improve colors
 set -g default-terminal 'xterm-256color'
 
@@ -78,7 +77,8 @@ set-window-option -g clock-mode-colour green #green
 
 
 set -g status-interval 1
-set -g status-justify centre # center align window list set -g status-left-length 20
+set -g status-justify centre # center align window list
+set -g status-left-length 20
 set -g status-right-length 140
 set -g status-left '#[fg=green]#H #[fg=black]• #[fg=green,bright]#(uname -r | cut -c 1-6)#[default]'
 set -g status-right '#[fg=green,bg=default,bright]#(tmux-mem-cpu-load -i 1) #[fg=red,dim,bg=default]#(uptime | cut -f 4-5 -d " " | cut -f 1 -d ",") #[fg=white,bg=default]%a%l:%M:%S %p#[default] #[fg=blue]%Y-%m-%d'
@@ -157,6 +157,10 @@ set-option -g mouse-resize-pane on
 set-option -g mouse-select-window on
 set-option -g default-shell /bin/zsh
 
+# Thyme (Pomodoro gem)
+set-option -g status-right '#(cat ~/.thyme-tmux)'
+set-option -g status-interval 1
+
 
 # ---------------------
 # Copy & Paste
@@ -178,6 +182,3 @@ bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
 bind y run 'tmux save-buffer - | reattach-to-user-namespace pbcopy '
 bind C-y run 'tmux save-buffer - | reattach-to-user-namespace pbcopy '
-
-set-option -g status-right '#(cat ~/.thyme-tmux)'
-set-option -g status-interval 1
