--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -1,6 +1,6 @@
 [user]
-    name = Leo Allen
-    email = leo.f.allen@gmail.com
+    name = Roi Driscoll
+    email = roi.driscoll@gmail.com
 [push]
     default = simple
 [core]
