--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -6,6 +6,7 @@
 [core]
     excludesfile = ~/.gitignore_global
     editor = vim
+    ;editor = "NVIM_TUI_ENABLE_TRUE_COLOR=1 nvim"
 [color]
   ui = auto
 [alias]
