--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -1,6 +1,6 @@
 [user]
-    name = Roi Driscoll
-    email = roi.driscoll@gmail.com
+    name = Tim Hyson
+    email = tjhyson@gmail.com
 [push]
     default = simple
 [core]
