--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -10,7 +10,7 @@ bind C-r source-file ~/.tmux.conf \; display "~/.tmux.conf reloaded"
 set -g base-index 1
 set-window-option -g pane-base-index 1
 
-set -g clock-mode-style 12
+# set -g clock-mode-style 24
 
 # renumber windows sequentially after removing one
 set -g renumber-windows on
@@ -33,8 +33,8 @@ set -s escape-time 0
 set -g history-limit 10000
 
 # Enable mouse support (works in iTerm)
-#set -g mouse on
-set-window-option -g mode-mouse on
+set -g mouse on
+#set-window-option -g mode-mouse
 #set-option -g mouse-select-pane on
 #set-option -g mouse-resize-pane on
 #set-option -g mouse-select-window on
@@ -81,9 +81,9 @@ bind C-y run 'tmux save-buffer - | reattach-to-user-namespace pbcopy '
 
 # Provide access to the clipboard for pbpaste, pbcopy http://goo.gl/DN82E
 set-option -g default-command "reattach-to-user-namespace -l zsh"
-#set-option -g status-bg colour235 #base02
-#set-option -g status-fg colour136 #yellow
-#set-option -g status-attr default
+set-option -g status-bg colour235 #base02
+set-option -g status-fg colour136 #yellow
+set-option -g status-attr default
 
 
 ###################
@@ -118,8 +118,8 @@ bind C-t split-window -v "source ~/.zshrc && tm-select-session"
 set -g display-panes-time 300
 
 # Pane number display
-#set-option -g display-panes-active-colour colour33 #blue
-#set-option -g display-panes-colour colour166 #orange
+set-option -g display-panes-active-colour colour33 #blue
+set-option -g display-panes-colour colour166 #orange
 
 # Binding to toggle synchronize panes
 is_synched='[[ $(tmux show-window-options -v synchronize-panes) == "on" ]]'
@@ -153,11 +153,11 @@ bind -n S-Up resize-pane -U 1
 #bind -n C-Down resize-pane -D 5 #keybinding conflicts with OS desktop navigation
 #bind -n C-Up resize-pane -U 5 #keybinding conflicts with OS desktop navigation
 
-## pane border
-#set-option -g pane-border-fg colour235 #base02
-#set-option -g pane-active-border-fg colour240 #base01
+# Pane border
+# set-option -g pane-border-fg colour235 #base02
+# set-option -g pane-active-border-fg colour240 #base01
 ## clock
-#set-window-option -g clock-mode-colour green #green
+set-window-option -g clock-mode-colour green #green
 
 
 ###################
@@ -178,14 +178,14 @@ bind C-j split-window -v "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(
 set-window-option -g automatic-rename on
 
 # default window title colors
-#set-window-option -g window-status-fg colour244 #base0
-#set-window-option -g window-status-bg default
-##set-window-option -g window-status-attr dim
+set-window-option -g window-status-fg colour244 #base0
+set-window-option -g window-status-bg default
+set-window-option -g window-status-attr dim
 
 # active window title colors
-#set-window-option -g window-status-current-fg colour166 #orange
-#set-window-option -g window-status-current-bg default
-##set-window-option -g window-status-current-attr bright
+set-window-option -g window-status-current-fg colour166 #orange
+set-window-option -g window-status-current-bg default
+set-window-option -g window-status-current-attr bright
 
 
 ###################
@@ -194,32 +194,35 @@ set-window-option -g automatic-rename on
 #
 ###################
 
-#set -g status-interval 1
-#set -g status-justify centre # center align window list
-set-option -g status-left-length 40
-set-option -g status-right-length 140
+# set -g status-interval 1
+set -g status-justify centre # center align window list
+set-option -g status-left-length 20
+set-option -g status-right-length 80
 set-option -g status-left '#[fg=green]#H #[fg=black]• #[fg=green,bright]#(uname -r | cut -c 1-6)#[default]'
 set-option -g status-right '#[fg=green,bg=default,bright]#(tmux-mem-cpu-load -i 1) #[fg=red,dim,bg=default]#(uptime | cut -f 4-5 -d " " | cut -f 1 -d ",") #[fg=white,bg=default]%a%l:%M:%S %p#[default] #[fg=blue]%d-%m-%Y'
 
 # Simplify status bar display.
-set -g status-left '[#S]'
-set -g status-right "#{?pane_synchronized,--SYNCED--,} #(is-online) #(battery -t -g black)  #(date '+%a, %b %d - %I:%M') "
-# set -g status-right ""
+# set -g status-left '[#S]'
+# set -g status-right "#{?pane_synchronized,--SYNCED--,} #(is-online) #(battery -t -g black)  #(date '+%a, %d %b - %H:%M') "
 
 # Remove administrative debris (session name, hostname, time) in status bar
-#set -g status-left ''
-#set -g status-right ''
+# set -g status-left ''
+# set -g status-right ''
 
 # Soften status bar color from harsh green to light gray
-#set -g status-bg '#666666'
-#set -g status-fg '#aaaaaa'
+set -g status-bg '#666666'
+set -g status-fg '#aaaaaa'
+
+# Status bar message text
+set-option -g message-bg colour235 #base02
+set-option -g message-fg colour166 #orange
 
 # status bar
-#set-option -g status-utf8 on
+# set-option -g status-utf8 on
 
 # Activity monitoring
-#setw -g monitor-activity on
-#set -g visual-activity on
+# setw -g monitor-activity on
+# set -g visual-activity on
 
 
 
@@ -232,9 +235,6 @@ set -g status-right "#{?pane_synchronized,--SYNCED--,} #(is-online) #(battery -t
 #bind-key v split-window -h
 #bind-key b split-window
 
-# message text
-#set-option -g message-bg colour235 #base02
-#set-option -g message-fg colour166 #orange
 
 # C-b is not acceptable -- Vim uses it
 #set-option -g prefix C-a
@@ -253,4 +253,4 @@ set -g status-right "#{?pane_synchronized,--SYNCED--,} #(is-online) #(battery -t
 
 # Thyme (Pomodoro gem)
 #set-option -g status-right '#(cat ~/.thyme-tmux)'
-#set-option -g status-interval 1
+# set-option -g status-interval 1
