--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -172,7 +172,7 @@ bind C-j split-window -v "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(
 
 # Quick session switching back and forth. I never use the built in layouts
 # (default mapping for Space), so I reclaimed the key for this
-#bind-key Space switch-client -l #needs remapping to another key
+bind-key Space switch-client -l 
 
 # auto window rename
 set-window-option -g automatic-rename on
@@ -196,14 +196,15 @@ set-window-option -g window-status-current-attr bright
 
 # set -g status-interval 1
 set -g status-justify centre # center align window list
-set-option -g status-left-length 20
+set-option -g status-left-length 40
 set-option -g status-right-length 80
-set-option -g status-left '#[fg=green]#H #[fg=black]• #[fg=green,bright]#(uname -r | cut -c 1-6)#[default]'
+#set-option -g status-left '#[fg=green]#H #[fg=black]• #[fg=green,bright]#(uname -r | cut -c 1-6)#[default]'
+set-option -g status-left '#[fg=green]#S'
 set-option -g status-right '#[fg=green,bg=default,bright]#(tmux-mem-cpu-load -i 1) #[fg=red,dim,bg=default]#(uptime | cut -f 4-5 -d " " | cut -f 1 -d ",") #[fg=white,bg=default]%a%l:%M:%S %p#[default] #[fg=blue]%d-%m-%Y'
 
 # Simplify status bar display.
 # set -g status-left '[#S]'
-# set -g status-right "#{?pane_synchronized,--SYNCED--,} #(is-online) #(battery -t -g black)  #(date '+%a, %d %b - %H:%M') "
+set -g status-right "#{?pane_synchronized,--SYNCED--,} #(is-online) #(battery -t -g black)  #(date '+%a, %d %b - %H:%M') "
 
 # Remove administrative debris (session name, hostname, time) in status bar
 # set -g status-left ''
@@ -221,8 +222,8 @@ set-option -g message-fg colour166 #orange
 # set-option -g status-utf8 on
 
 # Activity monitoring
-# setw -g monitor-activity on
-# set -g visual-activity on
+setw -g monitor-activity on
+set -g visual-activity on
 
 
 
