--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -1,4 +1,12 @@
-# Ctrl-Space prefix key. Default => C-b. Send C-Space with repeat option via C-Space C-Space
+#===============================================================================
+#                              ~My tmux config~
+#===============================================================================
+#
+# Author:          Tim Hyson [http://timhyson.com]
+# Source:          https://github.com/timhyson/home-files
+#
+#-------------------------------------------------------------------------------
+## Ctrl-Space prefix key. Default => C-b. Send C-Space with repeat option via C-Space C-Space
 unbind-key C-b
 set -g prefix C-Space
 bind-key -r C-Space send-prefix
@@ -148,10 +156,10 @@ bind -n S-Left resize-pane -L 2
 bind -n S-Right resize-pane -R 2
 bind -n S-Down resize-pane -D 1
 bind -n S-Up resize-pane -U 1
-#bind -n C-Left resize-pane -L 10 #keybinding conflicts with OS desktop navigation
-#bind -n C-Right resize-pane -R 10 #keybinding conflicts with OS desktop navigation
-#bind -n C-Down resize-pane -D 5 #keybinding conflicts with OS desktop navigation
-#bind -n C-Up resize-pane -U 5 #keybinding conflicts with OS desktop navigation
+bind -n C-Left resize-pane -L 10 #keybinding conflicts with OS desktop navigation
+bind -n C-Right resize-pane -R 10 #keybinding conflicts with OS desktop navigation
+bind -n C-Down resize-pane -D 5 #keybinding conflicts with OS desktop navigation
+bind -n C-Up resize-pane -U 5 #keybinding conflicts with OS desktop navigation
 
 # Pane border
 # set-option -g pane-border-fg colour235 #base02
