--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -191,7 +191,7 @@ set-window-option -g window-status-bg default
 set-window-option -g window-status-attr dim
 
 # active window title colors
-set-window-option -g window-status-current-fg colour166 #orange
+set-window-option -g window-status-current-fg '#2aa198' #solarized cyan
 set-window-option -g window-status-current-bg default
 set-window-option -g window-status-current-attr bright
 
@@ -207,16 +207,14 @@ set -g status-justify centre # center align window list
 set-option -g status-left-length 40
 set-option -g status-right-length 80
 #set-option -g status-left '#[fg=green]#H #[fg=black]• #[fg=green,bright]#(uname -r | cut -c 1-6)#[default]'
-set-option -g status-left '#[fg=green]#S'
-set-option -g status-right '#[fg=green,bg=default,bright]#(tmux-mem-cpu-load -i 1) #[fg=red,dim,bg=default]#(uptime | cut -f 4-5 -d " " | cut -f 1 -d ",") #[fg=white,bg=default]%a%l:%M:%S %p#[default] #[fg=blue]%d-%m-%Y'
+# set-option -g status-right '#[fg=green,bg=default,bright]#(tmux-mem-cpu-load -i 1) #[fg=red,dim,bg=default]#(uptime | cut -f 4-5 -d " " | cut -f 1 -d ",") #[fg=white,bg=default]%a%l:%M:%S %p#[default] #[fg=blue]%d-%m-%Y'
 
 # Simplify status bar display.
+# Battery indicator thanks to https://github.com/Goles/Battery
+# Network status indicator thanks to https://github.com/sindresorhus/is-online-cli
 # set -g status-left '[#S]'
-set -g status-right "#{?pane_synchronized,--SYNCED--,} #(is-online) #(battery -t -g black)  #(date '+%a, %d %b - %H:%M') "
-
-# Remove administrative debris (session name, hostname, time) in status bar
-# set -g status-left ''
-# set -g status-right ''
+set-option -g status-left '#[fg=green]#S'
+set -g status-right "#{?pane_synchronized,--SYNCED--,} #(is-online) #(battery -t)  #(date '+%a, %d %b - %H:%M') "
 
 # Soften status bar color from harsh green to light gray
 set -g status-bg '#666666'
