--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -212,7 +212,6 @@ set-option -g status-right-length 80
 # Simplify status bar display.
 # Battery indicator thanks to https://github.com/Goles/Battery
 # Network status indicator thanks to https://github.com/sindresorhus/is-online-cli
-# set -g status-left '[#S]'
 set-option -g status-left '#[fg=green]#S'
 set -g status-right "#{?pane_synchronized,--SYNCED--,} #(is-online) #(battery -t)  #(date '+%a, %d %b - %H:%M') "
 
@@ -231,21 +230,9 @@ set-option -g message-fg colour166 #orange
 setw -g monitor-activity on
 set -g visual-activity on
 
-
-
-
-
-
-
-
-# set window split
-#bind-key v split-window -h
-#bind-key b split-window
-
-
 # C-b is not acceptable -- Vim uses it
 #set-option -g prefix C-a
-#bind-key C-a last-window
+bind-key C-a last-window
 
 # Rather than constraining window size to the maximum size of any client
 # connected to the *session*, constrain window size to the maximum size of any
