--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -237,7 +237,7 @@ bind-key C-a last-window
 # Rather than constraining window size to the maximum size of any client
 # connected to the *session*, constrain window size to the maximum size of any
 # client connected to *that window*. Much more reasonable.
-#setw -g aggressive-resize on
+setw -g aggressive-resize on
 
 ## Allows us to use C-a a <command> to send commands to a TMUX session inside
 ## another TMUX session
