--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -1,10 +1,10 @@
 [user]
 	name = Tim Hyson
-  email = tjhyson@gmail.com
+	email = tjhyson@gmail.com
 [push]
   default = simple
 [core]
-  excludesfile = ~/.global_ignore
+	excludesfile = /Users/timhyson/.gitignore_global
   editor = vim
   ;editor = "NVIM_TUI_ENABLE_TRUE_COLOR=1 nvim"
 [color]
@@ -95,3 +95,5 @@
   prune = true
 [credential]
 	helper = osxkeychain
+[http]
+	postBuffer = 524288000
